[gd_scene load_steps=13 format=2]

[ext_resource path="res://modules/default/desktop/bottom_bar.gd" type="Script" id=1]
[ext_resource path="res://system/components/large_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://system/app_handler.gd" type="Script" id=5]
[ext_resource path="res://system/components/theme_property_applier.gd" type="Script" id=6]
[ext_resource path="res://modules/default/desktop/loading.gd" type="Script" id=7]
[ext_resource path="res://modules/default/desktop/notifications.gd" type="Script" id=8]
[ext_resource path="res://modules/default/desktop/loading_icon.png" type="Texture" id=10]
[ext_resource path="res://modules/default/desktop/top_bar.gd" type="Script" id=11]
[ext_resource path="res://system/components/theme_applier.gd" type="Script" id=12]
[ext_resource path="res://modules/default/desktop/desktop.gd" type="Script" id=13]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_top = 1.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.356863, 0.882353, 0.4, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Desktop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
status_spacers_paths = [ NodePath("App/TopSpacer"), NodePath("App/BottomSpacer") ]

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="ThemeApplier" type="Node" parent="Overlay"]
script = ExtResource( 12 )
apply_to = NodePath("../Status")

[node name="Status" type="Control" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopContainer" type="MarginContainer" parent="Overlay/Status"]
anchor_right = 1.0
margin_bottom = 32.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="Panel" parent="Overlay/Status/TopContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay/Status/TopContainer/TopPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelContainer" type="Control" parent="Overlay/Status/TopContainer/TopPanel/HBoxContainer"]
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Label" parent="Overlay/Status/TopContainer/TopPanel/HBoxContainer/LabelContainer" instance=ExtResource( 3 )]
anchor_bottom = 1.0
margin_right = 61.0
margin_bottom = 0.0
focus_mode = 2
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
text = "GameShell"
valign = 1
font_values = {
"font": "large"
}
constant_values = {

}
color_values = {

}
stylebox_values = {

}
texture_values = {

}

[node name="Widgets" type="HBoxContainer" parent="Overlay/Status/TopContainer/TopPanel/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="WidgetControls" type="PanelContainer" parent="Overlay/Status/TopContainer/TopPanel"]
visible = false
margin_top = 26.0
margin_right = 24.0
margin_bottom = 50.0
rect_min_size = Vector2( 24, 24 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
font_values = {

}
constant_values = {

}
color_values = {

}
stylebox_values = {
"panel": "popup"
}
texture_values = {

}

[node name="Highlighter" type="Panel" parent="Overlay/Status/TopContainer/TopPanel"]
visible = false
margin_top = 23.0
margin_right = 18.0
margin_bottom = 27.0
rect_min_size = Vector2( 18, 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
font_values = {

}
constant_values = {

}
color_values = {

}
stylebox_values = {
"panel": "highlighter"
}
texture_values = {

}

[node name="NotificationsBar" type="Control" parent="Overlay/Status/TopContainer"]
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 28.0
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay/Status/TopContainer/NotificationsBar"]
anchor_right = 1.0
margin_top = 28.0
margin_bottom = 42.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSpace" type="Control" parent="Overlay/Status/TopContainer/NotificationsBar/HBoxContainer"]
margin_right = 12.0
margin_bottom = 15.0
rect_min_size = Vector2( 12, 0 )

[node name="PanelContainer" type="PanelContainer" parent="Overlay/Status/TopContainer/NotificationsBar/HBoxContainer"]
margin_left = 12.0
margin_right = 300.0
margin_bottom = 15.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Overlay/Status/TopContainer/NotificationsBar/HBoxContainer/PanelContainer"]
margin_right = 288.0
margin_bottom = 15.0
custom_constants/margin_top = 0
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="Overlay/Status/TopContainer/NotificationsBar/HBoxContainer/PanelContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Notification!"
clip_text = true

[node name="RightSpace" type="Control" parent="Overlay/Status/TopContainer/NotificationsBar/HBoxContainer"]
margin_left = 300.0
margin_right = 312.0
margin_bottom = 15.0
rect_min_size = Vector2( 12, 0 )

[node name="Tween" type="Tween" parent="Overlay/Status/TopContainer/NotificationsBar"]

[node name="Tween" type="Tween" parent="Overlay/Status/TopContainer"]

[node name="BottomContainer" type="MarginContainer" parent="Overlay/Status"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
grow_vertical = 0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputEvents" type="Panel" parent="Overlay/Status/BottomContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Overlay/Status/BottomContainer/InputEvents"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pressed" type="HBoxContainer" parent="Overlay/Status/BottomContainer/InputEvents/HBoxContainer"]
visible = false
margin_right = 94.0
margin_bottom = 24.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Overlay/Status/BottomContainer/InputEvents/HBoxContainer/Pressed"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )
text = "Pressed:"

[node name="Value" type="Label" parent="Overlay/Status/BottomContainer/InputEvents/HBoxContainer/Pressed"]
margin_left = 59.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )

[node name="Released" type="HBoxContainer" parent="Overlay/Status/BottomContainer/InputEvents/HBoxContainer"]
visible = false
margin_right = 302.0
margin_bottom = 22.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Overlay/Status/BottomContainer/InputEvents/HBoxContainer/Released"]
margin_top = 3.0
margin_right = 57.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )
text = "Released:"

[node name="Value" type="Label" parent="Overlay/Status/BottomContainer/InputEvents/HBoxContainer/Released"]
margin_left = 61.0
margin_top = 3.0
margin_right = 61.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )

[node name="Left" type="HBoxContainer" parent="Overlay/Status/BottomContainer/InputEvents/HBoxContainer"]
margin_right = 150.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Right" type="HBoxContainer" parent="Overlay/Status/BottomContainer/InputEvents/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="LoadingRect" type="ColorRect" parent="Overlay/Status"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Overlay/Status/LoadingRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pivot" type="Control" parent="Overlay/Status/LoadingRect/CenterContainer"]
margin_left = 160.0
margin_top = 120.0
margin_right = 160.0
margin_bottom = 120.0

[node name="Sprite" type="Sprite" parent="Overlay/Status/LoadingRect/CenterContainer/Pivot"]
texture = ExtResource( 10 )

[node name="Tween" type="Tween" parent="Overlay/Status/LoadingRect"]
repeat = true
playback/repeat = true

[node name="Tween" type="Tween" parent="."]

[node name="App" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_constants/separation = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
app_container = NodePath("Container")

[node name="TopSpacer" type="Control" parent="App"]
margin_right = 320.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_vertical = 5

[node name="Container" type="VBoxContainer" parent="App"]
margin_top = 28.0
margin_right = 320.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="BottomSpacer" type="Control" parent="App"]
margin_top = 212.0
margin_right = 320.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 28 )
size_flags_vertical = 5
